css/style.css
/***************************************************
 * CSS Stylesheet for jpegery
 * *************************************************
 *
 * Stylesheet for jpegery's main pages
 * Built to be loaded after Bootstrap
 *
 ***************************************************/

/***************************************************
 * SECTION: Global Styles
 ***************************************************/

/* Prevent content from going under nav bar */
body {
	padding-top: 70px;
	margin: 0 auto;
}

/* Clears default spacing, which allows for better design */
h1, h2, h3, h4, h5, h6 {
	margin: 0 0 5px 0;
	padding: 0 0 5px;
}

/***
* Flexbox Sticky Footer
* http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
* Minified for brevity.
***/
html {
	display: flex;
}

/*corrects IE min-height bug*/
body {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
	width: 100%;
}

.mainContent {
	flex: 1 0 auto;
}

/***************************************************
 * SECTION: Navigation Bar
 ***************************************************/

/* Navbar background color */
.navbar-fixed-top {
	background: #133253;
}

/* Color behind logo */
.navbar-brand {
	background-color: #041D37;
	color: white;
}

/* Navigation bar non-active text color */
.navbar-fixed-top .navbar-nav > li > a {
	color: #56A0C9;
}

/* Navigation bar non-active hover color */
.navbar-fixed-top .navbar-nav > li > a:hover,
.navbar-fixed-top .navbar-nav > li > a:focus {
	color: white;
	background-color: #56A0C9;
}

/* Navigation bar active text and background */
.navbar-fixed-top .navbar-nav > .active > a,
.navbar-fixed-top .navbar-nav > .active > a:hover,
.navbar-fixed-top .navbar-nav > .active > a:focus {
	color: white;
	background-color: black;
}

/* Mobile (collapsed) button background color and icon bar color */
.navbar-toggle {
	background-color: #041D37;
}

.icon-bar {
	background-color: white;
}

/***************************************************
 * SECTION: Above Content
 ***************************************************/

/* Adds a bit of space between search box and the buttons below it. */
.search {
	margin-bottom: 10px;
}

.aboveRow {
	margin-bottom: 10px;
}

/***************************************************
 * SECTION: Content
 ***************************************************/

.contentContainer {

}

.contentRow {

}

/* Clears Bootstrap defaults */
.contentImageRow > .col-md-3,
.contentImageRow > .col-sm-4,
.contentImageRow > .col-xs-6 {
	padding-right: 0;
	padding-left: 0;
}

/* Adds small space between content images */
.contentImage {

}

.homeImage {
	margin: 5px;
	max-height: 200px;
	overflow: hidden;
}

.homeRow {
	min-height: 300px;
	overflow: hidden;
}

/***************************************************
 * SECTION: Single Image Template
 ***************************************************/
/* Clears Bootstrap defaults */
.nextImageGroup > .col-sm-6 {
	padding-right: 0;
	padding-left: 0;
}

.nextImage {
	max-height: 80px;
	overflow: hidden;
	margin: 2px;
}

/* Adds padding around image text */
.imageText {
	padding: 10px 0;
}

/* Styles Comments Section */
.commentSection {
	background-color: bisque;
	border: 1px solid;
	border-radius: 5px;
	padding: 15px 0;
	margin: 10px 0;
}

.comment {
	padding: 5px;
	margin: 5px;
}

/* Color of comment timestamp */
.commentTime {
	color: dimgray;
}

/***************************************************
 * SECTION: User Page Template
 ***************************************************/
.userInfo {
	padding-left: 30px;
	margin-bottom: 10px;
}

/* Centers Up and Down Vote Buttons */
.upDownVote {
	/*margin: 0 auto;*/
	margin: 10px 0;
	text-align: center;
}

/***************************************************
 * SECTION: Settings Page Template
 ***************************************************/
.settingsBox {
	border: 1px solid;
	border-radius: 5px;
	padding: 10px;
	padding-bottom: 50px;
	margin-bottom: 10px;
}

/***************************************************
 * SECTION: Footer
 ***************************************************/
.footer {
	margin-top: 10px;
	padding: 10px 20px 5px;
	background-color: #133253;
	color: #337ab7;
}

